--- a/apresentacao.html
+++ b/apresentacao.html
@@ -11,15 +11,9 @@
     <br>
     <font size="2" face="Verdana, Arial, Helvetica, sans-serif">Data de Nascimento: 07/03/2003</font>
     <br>
-    <font size="2" face="Verdana, Arial, Helvetica, sans-serif">Email FATEC: gabriel.diacenco@fatec.sp.gov.br</font>
+    <font size="2" face="Verdana, Arial, Helvetica, sans-serif">Email PROFISSIONAL: gmendes.diacenco1@gmail.com</font>
     <br>
-    <font size="2" face="Verdana, Arial, Helvetica, sans-serif">Hobbies: Jogar, Dançar, Assistir filmes/séries/animes e Estudar</font>
-    <br>
-    <font size="2" face="Verdana, Arial, Helvetica, sans-serif">Músicas Favoritas: Não tenho música favorita no momento!</font>
-    <br>
-    <font size="2" face="Verdana, Arial, Helvetica, sans-serif">Filmes Favoritos: UP - Altas aventuras</font>
-    <br>
-    <font size="2" face="Verdana, Arial, Helvetica, sans-serif">Séries Favoritas: Stranger Things e Game Of Thrones</font>
+    <font size="2" face="Verdana, Arial, Helvetica, sans-serif">Focando em minha evolução pessoal</font>
     <br>
 </body>
 </html>
